--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <button style="width: 50px; height: 30px;">Start</button>
     <button style="width: 50px; height: 30px;">Stop</button>
+    <script src="script.js"></script>
 </body>
 </html>
